
  [ Sjoerd Simons ]
  * Enable libnice support
  * debian/patches/00-dont-release-pads.patch:
    - Don't release request pads on gstrtpbin. It's not implemented and causes
      warnings. From upstream git
  * debian/patches/01-set-remote-candidates-in-idle.patch:
    - Set remote candidates in an idle callback to prevent deadlocks
  * Add dependency on gstreamer0.10-plugins-farsight

  [ Simon McVittie ]
  * Move packaging to git

 -- Sjoerd Simons <sjoerd@debian.org>  Thu, 27 Nov 2008 15:03:14 +0100

farsight2 (0.0.4-1) experimental; urgency=low

  * New upstream release
  * debian/libgstfarsight0.10-0.symbols: Updated with new symbols
  * debian/libgstfarsight0.10-dev.install: Also install libgstfarsight-0.10.a
  * debian/libgstfarsight0.10-doc.install: Install the farsight2 plugin
    documentation
  * debian/libgstfarsight0.10-doc.install: Use the new location of the library
    documentation
  * debian/rules: explicitly enable only the rawudp and multicast transmitter,
    as the nice autodetection is broken.

 -- Sjoerd Simons <sjoerd@debian.org>  Thu, 13 Nov 2008 22:02:03 +0000

farsight2 (0.0.3-1) experimental; urgency=low

  [ Sjoerd Simons ]
  * debian/conrol: Fix Farsight spelling in the descriptions
  * debian/control: Add gstreamer0.10-plugins-{base,good,bad} to the depends
    of libgstfarsight0.10-0.

  [ Simon McVittie ]
  * Use my debian.org address in Uploaders

  [ Laurent Bigonville ]
  * New upstream release
  * Use my debian.org address in Uploaders
  * Bump Standards-Version to version 3.8.0 (no further changes)
  * debian/copyright: Fix download address
  * debian/libgstfarsight0.10-doc.install: Fix documentation path
  * debian/libgstfarsight0.10-0.symbols: Adjust symbols file 
  * debian/control: Bump libglib2.0-dev build-dep

 -- Laurent Bigonville <bigon@debian.org>  Wed, 17 Sep 2008 21:23:57 +0200

farsight2 (0.0.2-1) experimental; urgency=low

  * First upload

 -- Sjoerd Simons <sjoerd@debian.org>  Tue, 11 Mar 2008 17:38:22 +0100