@@ -1,0 +1,9 @@
+[DEFAULT]
+debian-branch = debian
+upstream-branch = upstream
+pristine-tar = True
+
+[git-buildpackage]
+tarball-dir = ../tarballs/
+export-dir = ../build-area/
+no-create-orig = True
