@@ -15,3 +15,5 @@ common-binary-post-install-arch:: list-missing
 
 binary-install/python-farsight::
 	dh_pycentral -p$(cdbs_curpkg)
+
+include $(CURDIR)/debian/update-patches.mk
